client/src/components/CustomSelect/CustomSelect.module.css
.select {
  position: relative;
  display: inline-block;
  width: 12rem;
  text-align: center;
  background-color: var(--color-yellow);
  color: var(--color-dark);
  border-radius: 10px;
}

.selected__option {
  cursor: pointer;
  padding: 10px;
  border: none;
  display: flex;
  justify-content: space-between;
}

.options {
  position: absolute;
  top: 140%;
  left: 0;
  width: 100%;
  border: none;
  border-radius: 10px;
  background-color: var(--color-yellow);
  z-index: 1;
}

.option {
  padding: 10px;
  color: var(--color-dark);
  border-bottom: var(--color-dark) 1px solid;
  cursor: pointer;
  transition: all 0.3s ease;
  &:hover {
    scale: 1.1;
  }
  &:last-child {
    border-bottom: none;
  }
}

